--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -14,6 +14,12 @@
     "Key": "N4ytL_P9XQphvB1L_W8dN6H_3hzlZmjYQs7yB6MzTxU",
     "Issuer": "Backend",
     "Audience": "Backend"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "servermailleg@gmail.com",
+    "Password": "gont ctwi kvyv zfsq"
   }
 
 }
