--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -18,8 +18,8 @@
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
     "Port": 587,
-    "Username": "servermailleg@gmail.com",
-    "Password": "gont ctwi kvyv zfsq"
+    "Username": "serverscdd@gmail.com",
+    "Password": "ghqr ngss egts nbic"
   }
 
 }
