pushing file upload to databse

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -20,6 +20,9 @@
     "Port": 587,
     "Username": "serverscdd@gmail.com",
     "Password": "ghqr ngss egts nbic"
+  },
+  "FileSettings": {
+    "UploadPath": "wwwroot/uploads"
   }
 
 }
