adding migration and readmechngaes

--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-BT67PHD;Initial Catalog=SCDD;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-BT67PHD;Initial Catalog=newscdd;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
 
   "Jwt": {
